# dodo-games

./: CMakeLists.txt  bounce-splash.h  bounce.cpp  clock.cpp
angle/: CMakeLists.txt  angle.cpp  angle.hpp
api/: api.h
draw_circle/: CMakeLists.txt  draw_circle.cpp  draw_circle.hpp
fixed_point/: CMakeLists.txt  fixed_point.cpp  fixed_point.hpp
menu/: CMakeLists.txt  menu.cpp  menu.hpp
mercenary/: CMakeLists.txt  mercenary.cpp  player.h
string/: CMakeLists.txt  string.cpp  string.hpp
trig/: CMakeLists.txt  trig.cpp  trig.hpp
